@@ -3,6 +3,9 @@ Python. It supports reading ID3v1.1, ID3v2.2, ID3v2.3, ID3v2.4, APEv2, and
 FLAC, and writing ID3v1.1, ID3v2.4, APEv2, and FLAC. It can also read
 MPEG audio and Xing headers.
 
+With the help of pyvorbis (http://www.andrewchatham.com/pyogg/), it can
+read Ogg Vorbis information.
+
 The goals are (in rough order of importance):
  * Read as many files as possible
  * Compatibility with as many other tag readers and editors as possible 
